gccida/g0/print_pattern
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_pattern/src/sched-vis.c:1104:14: error: use of undeclared identifier 'off_80B253'
sprintf( t1, off_80B253); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_pattern/src/sched-vis.c:1160:15: error: use of undeclared identifier 'off_80B24F'
sprintf( buf, off_80B24F, t1); 
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_pattern/src/obj/sched-vis.o] Error 1
